--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "avt_react",
+  "homepage": "https://nirall.github.io/avt/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
